force-app/main/default/objects/Quality_Score__c/fields/Environment_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Environment_Max_Value__c</fullName>
    <formula>7 * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Environment Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>