force-app/main/default/objects/Quality_Score__c/fields/Financial_fraud__c.field-meta.xml
<CustomField>
    <fullName>Financial_fraud__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ZT - Financial fraud (Collecting card details / Financial fraud / Asking for money transfer / Proxy usage / Data breach (Card, UPI, Wallet details, ATM Pin, CVV number, OTP, requesting to download irrelevant apps)</description>
    <label>Financial fraud</label>
    <type>Checkbox</type>
</CustomField>