force-app/main/default/objects/Quality_Score__c/fields/Financial_Max_value__c.field-meta.xml
<CustomField>
    <fullName>Financial_Max_value__c</fullName>
    <formula>3 * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Max value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>