force-app/main/default/objects/Quality_Score__c/fields/Financial_V1_value__c.field-meta.xml
<CustomField>
    <fullName>Financial_V1_value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Financial V1 value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>