force-app/main/default/objects/Quality_Score__c/fields/Follow_up_adherence_effectiveness__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_adherence_effectiveness__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RA - Follow up adherence &amp; effectiveness (Did not create follow up / Follow up leads not called within 24 hours &amp; no effective follow up)</description>
    <label>Follow up adherence &amp; effectiveness</label>
    <type>Checkbox</type>
</CustomField>