force-app/main/default/objects/Quality_Score__c/fields/Guest_Lectures_max_value__c.field-meta.xml
<CustomField>
    <fullName>Guest_Lectures_max_value__c</fullName>
    <formula>1 * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Guest Lectures max value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>