force-app/main/default/objects/Quality_Score__c/fields/Guest_Lectures_V1_Value__c.field-meta.xml
<CustomField>
    <fullName>Guest_Lectures_V1_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Guest Lectures V1 Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>