force-app/main/default/objects/Quality_Score__c/fields/Hateful_messages__c.field-meta.xml
<CustomField>
    <fullName>Hateful_messages__c</fullName>
    <defaultValue>false</defaultValue>
    <description>ZT - Hateful messages about Unacademy( Spiteful or malicious opinions about Unacademy, its employees or policies)</description>
    <label>Hateful messages</label>
    <type>Checkbox</type>
</CustomField>