force-app/main/default/objects/Quality_Score__c/fields/Incomplete_calls__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_calls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incomplete calls</label>
    <type>Checkbox</type>
</CustomField>