force-app/main/default/objects/Quality_Score__c/fields/Incorrect_Information__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RA - False / incorrect information (Wrong product pitched- Wrong / outdated info related to product and process in order to sell the product - False promises on product or features, e.g. learner will get special attentions, additional course upon subscribing)</description>
    <label>Incorrect Information</label>
    <type>Checkbox</type>
</CustomField>