force-app/main/default/objects/Quality_Score__c/fields/Intent_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Intent_Max_Value__c</fullName>
    <formula>3 * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Intent Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>