force-app/main/default/objects/Quality_Score__c/fields/Invalid_Reason__c.field-meta.xml
<CustomField>
    <fullName>Invalid_Reason__c</fullName>
    <label>Invalid Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>