force-app/main/default/objects/Quality_Score__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Quality Score</relationshipLabel>
    <relationshipName>Quality_Score</relationshipName>
    <type>Lookup</type>
</CustomField>