force-app/main/default/objects/Quality_Score__c/fields/Lead_Link__c.field-meta.xml
<CustomField>
    <fullName>Lead_Link__c</fullName>
    <formula>&quot;https://relevel--uat.lightning.force.com/lightning/r/Lead/&quot;+ Lead__c +&quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Link</label>
    <type>Text</type>
</CustomField>