force-app/main/default/objects/Quality_Score__c/fields/Live_Class_Sch_and_Dur_Max_value__c.field-meta.xml
<CustomField>
    <fullName>Live_Class_Sch_and_Dur_Max_value__c</fullName>
    <formula>2 * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Live Class - Sch and Dur Max value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>