force-app/main/default/objects/Quality_Score__c/fields/Live_Class_Schedule_Dua_V1_Value__c.field-meta.xml
<CustomField>
    <fullName>Live_Class_Schedule_Dua_V1_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Live Class - Schedule &amp; Dua V1 Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>