force-app/main/default/objects/Quality_Score__c/fields/Live_Class_Top_Educators__c.field-meta.xml
<CustomField>
    <fullName>Live_Class_Top_Educators__c</fullName>
    <label>Live Class - Top Educators</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>