force-app/main/default/objects/Quality_Score__c/fields/Need_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Need_Mapping__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Need Mapping</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>