force-app/main/default/objects/Quality_Score__c/fields/Need_Mapping_Max__c.field-meta.xml
<CustomField>
    <fullName>Need_Mapping_Max__c</fullName>
    <defaultValue>20</defaultValue>
    <label>Need Mapping Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>