force-app/main/default/objects/Quality_Score__c/fields/Negotiation_and_Urgency_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_and_Urgency_Max_Value__c</fullName>
    <formula>5 * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Negotiation and Urgency Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>