force-app/main/default/objects/Quality_Score__c/fields/Negotiation_and_Urgency_V1_Value__c.field-meta.xml
<CustomField>
    <fullName>Negotiation_and_Urgency_V1_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Negotiation and Urgency V1 Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>