force-app/main/default/objects/Quality_Score__c/fields/No_proper_efforts__c.field-meta.xml
<CustomField>
    <fullName>No_proper_efforts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RA - No proper efforts to sell the product(Offers, sales hooks usage, effective convincing skills not found)</description>
    <label>No proper efforts to sell the product</label>
    <type>Checkbox</type>
</CustomField>