force-app/main/default/objects/Quality_Score__c/fields/Objection_handling_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Objection_handling_Max_Value__c</fullName>
    <formula>6 * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Objection handling Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>