force-app/main/default/objects/Quality_Score__c/fields/Objection_handling_V1_Value__c.field-meta.xml
<CustomField>
    <fullName>Objection_handling_V1_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Objection handling V1 Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>