force-app/main/default/objects/Quality_Score__c/fields/Opening_Max__c.field-meta.xml
<CustomField>
    <fullName>Opening_Max__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Opening Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>