force-app/main/default/objects/Quality_Score__c/fields/Opportunity_Cost_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Cost_Max_Value__c</fullName>
    <formula>2 * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Cost Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>