force-app/main/default/objects/Quality_Score__c/fields/Payment_Options_and_process__c.field-meta.xml
<CustomField>
    <fullName>Payment_Options_and_process__c</fullName>
    <label>Payment Options and process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>5</fullName>
                <isActive>false</isActive>
                <label>5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>