force-app/main/default/objects/Quality_Score__c/fields/Payment_Options_and_process_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Payment_Options_and_process_Max_Value__c</fullName>
    <formula>1 * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Options and process Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>