force-app/main/default/objects/Quality_Score__c/fields/Payment_Options_and_process_V1_Value__c.field-meta.xml
<CustomField>
    <fullName>Payment_Options_and_process_V1_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Payment Options and process V1 Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>