force-app/main/default/objects/Quality_Score__c/fields/Placement_Assis_and_Career_Sup_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Placement_Assis_and_Career_Sup_Max_Value__c</fullName>
    <formula>5 * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement Assis and Career Sup Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>