force-app/main/default/objects/Quality_Score__c/fields/Placement_Assis_and_Career_Sup_V1_Value__c.field-meta.xml
<CustomField>
    <fullName>Placement_Assis_and_Career_Sup_V1_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Placement Assis and Career Sup V1  Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>