force-app/main/default/objects/Quality_Score__c/fields/Placement_Assistance_and_Career_Support__c.field-meta.xml
<CustomField>
    <fullName>Placement_Assistance_and_Career_Support__c</fullName>
    <label>Placement Assis and Career Sup V1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not even mentioned</fullName>
            </value>
            <value>
                <fullName>Only mentioned</fullName>
            </value>
            <value>
                <fullName>Partially explained</fullName>
            </value>
            <value>
                <fullName>Very well explained</fullName>
            </value>
            <value>
                <fullName>Explained with examples</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>