force-app/main/default/objects/Quality_Score__c/fields/Price_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Price_Breakdown__c</fullName>
    <label>Price Breakdown</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>