force-app/main/default/objects/Quality_Score__c/fields/Price_Breakdown_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Price_Breakdown_Max_Value__c</fullName>
    <formula>5 * 4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Breakdown Max Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>