force-app/main/default/objects/Quality_Score__c/fields/Price_Breakdown_V1_Value__c.field-meta.xml
<CustomField>
    <fullName>Price_Breakdown_V1_Value__c</fullName>
    <label>Price Breakdown V1 Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>